--- a/projects/extensions/datetimepicker/time.scss
+++ b/projects/extensions/datetimepicker/time.scss
@@ -22,7 +22,10 @@ $time-ampm-width: 40px;
 }
 
 .mtx-time-input {
+  box-sizing: border-box;
   width: $time-input-width;
+  height: 100%;
+  padding: 0;
   font-size: $time-font-size;
   text-align: center;
   border-radius: $time-border-radius;
@@ -49,26 +52,26 @@ $time-ampm-width: 40px;
     margin-left: auto;
     margin-right: 12px;
   }
-}
 
-.mtx-time-am.mat-button,
-.mtx-time-pm.mat-button {
-  flex: 1;
-  width: $time-ampm-width;
-  min-width: auto;
-  padding: 0;
-  line-height: normal;
-  border-width: 1px;
-  border-style: solid;
-}
+  .mtx-time-am,
+  .mtx-time-pm {
+    flex: 1;
+    width: $time-ampm-width;
+    min-width: auto;
+    padding: 0;
+    line-height: normal;
+    border-width: 1px;
+    border-style: solid;
+  }
 
-.mtx-time-am.mat-button {
-  border-radius: $time-border-radius $time-border-radius 0 0;
-}
+  .mtx-time-am {
+    border-radius: $time-border-radius $time-border-radius 0 0;
+  }
 
-.mtx-time-pm.mat-button {
-  border-radius: 0 0 $time-border-radius $time-border-radius;
-  border-top: none;
+  .mtx-time-pm {
+    border-radius: 0 0 $time-border-radius $time-border-radius;
+    border-top: none;
+  }
 }
 
 .mtx-time-button-wrapper {
